codeanywhere_workspace/routes/temp/de3ac676e01744108ba1/errors
/usercode/file.cpp:1:1: error: 'gugtygy' does not name a type
 gugtygy
 ^
